axum-macros/tests/from_request/fail/derive_opt_out_debug_without_error.rs
use axum_macros::FromRequest;

#[derive(FromRequest)]
#[from_request(rejection_derive(!Debug))]
struct Extractor {
    body: String,
}

fn main() {}
